# OCR

./: .gitmodules  App.cpp  App.h  CMakeLists.txt  Debug.h  DockPanels.cpp  DockPanels.h  HomeTab.cpp  HomeTab.h  ImageView.cpp  ImageView.h  ImageViewer.cpp  ImageViewer.h  MainWindow.cpp  MainWindow.h  PYTHONHOME.txt  PanelContainers.cpp  PanelContainers.h  README.md  Readme.txt  Tab.h  TextData.cpp  TextData.h  ToolPanels.cpp  ToolPanels.h  debug.cpp  debug.h  main.cpp  recognition.cpp  recognition.h
Deprecated/: ImageView.cpp  ImageView.h  ImageView.ui  ImageViewer.cpp  ImageViewer.h  ImageViewer.ui  MainWindow.ui
Panels/: DataListPanel.cpp  DataListPanel.h  DataViewPanel.cpp  DataViewPanel.h  InfoPanel.cpp  InfoPanel.h  PanelContainers.cpp  PanelContainers.h
Tabs/: CameraTab.cpp  CameraTab.h  HomeTab.h  ImageView.cpp  ImageView.h  ImageViewer.cpp  ImageViewer.h  ImageViewerPanels.cpp  ImageViewerPanels.h  Tab.h
UI/: CameraPanel.ui  DataList.ui  DataListPanel.ui  DataViewPanel.ui  HomeTab.ui  InfoPanel.ui  InfoWidget.ui  MainWindow.ui  TextListItem.ui
cmake/: init_install.cmake  install.cmake
